--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "faster-whisper>=1.1.1",
+    "hf-xet>=1.1.3",
     "python-docx>=1.1.2",
 ]
